I tried to group some things up into folders
though command abilities are kinda both commands and abilities

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -942,7 +942,7 @@
     <Compile Include="Kernel\Abilities\CharacterAbilityFlags.cs" />
     <Compile Include="Kernel\Abilities\CharacterAbilities.cs" />
     <Compile Include="Kernel\CharacterStats.cs" />
-    <Compile Include="Kernel\Commands\CommandAbilities.cs" />
+    <Compile Include="Kernel\Abilities\CommandAbilities.cs" />
     <Compile Include="Kernel\Commands\CommandAbilityData.cs" />
     <Compile Include="Kernel\KernelBin.cs" />
     <Compile Include="Kernel\Devour.cs" />
@@ -958,30 +958,30 @@
     <Compile Include="Kernel\JunctionStatuses.cs" />
     <Compile Include="Kernel\MagicData.cs" />
     <Compile Include="Kernel\MagicID.cs" />
-    <Compile Include="Kernel\MenuAbilities.cs" />
+    <Compile Include="Kernel\Abilities\MenuAbilities.cs" />
     <Compile Include="Kernel\MiscSection.cs" />
     <Compile Include="Kernel\MiscTextPointers.cs" />
-    <Compile Include="Kernel\NonBattleItemsData.cs" />
+    <Compile Include="Kernel\Items\NonBattleItemsData.cs" />
     <Compile Include="Kernel\NonJunctionableGFsAttacksData.cs" />
-    <Compile Include="Kernel\PartyAbilities.cs" />
+    <Compile Include="Kernel\Abilities\PartyAbilities.cs" />
     <Compile Include="Kernel\PersistentStatuses.cs" />
     <Compile Include="Kernel\Quantity.cs" />
     <Compile Include="Kernel\Limit\BlueMagicQuistisLimitBreakParameters.cs" />
-    <Compile Include="Kernel\RenzokukenFinisher.cs" />
-    <Compile Include="Kernel\RenzokukenFinisherData.cs" />
-    <Compile Include="Kernel\RinoaLimitBreaksPart1.cs" />
-    <Compile Include="Kernel\RinoaLimitBreaksPart2.cs" />
-    <Compile Include="Kernel\SelphieLimitBreakSets.cs" />
-    <Compile Include="Kernel\ShotIrvineLimitBreak.cs" />
-    <Compile Include="Kernel\Slot.cs" />
-    <Compile Include="Kernel\SlotArray.cs" />
+    <Compile Include="Kernel\Limit\RenzokukenFinisher.cs" />
+    <Compile Include="Kernel\Limit\RenzokukenFinisherData.cs" />
+    <Compile Include="Kernel\Limit\RinoaLimitBreaksPart1.cs" />
+    <Compile Include="Kernel\Limit\RinoaLimitBreaksPart2.cs" />
+    <Compile Include="Kernel\Limit\SelphieLimitBreakSets.cs" />
+    <Compile Include="Kernel\Limit\ShotIrvineLimitBreak.cs" />
+    <Compile Include="Kernel\Limit\Slot.cs" />
+    <Compile Include="Kernel\Limit\SlotArray.cs" />
     <Compile Include="Kernel\Stat.cs" />
     <Compile Include="Kernel\StatFlags.cs" />
-    <Compile Include="Kernel\StatPercentageAbilities.cs" />
+    <Compile Include="Kernel\Abilities\StatPercentageAbilities.cs" />
     <Compile Include="Kernel\Target.cs" />
-    <Compile Include="Kernel\TemporaryCharacterLimitBreaks.cs" />
+    <Compile Include="Kernel\Limit\TemporaryCharacterLimitBreaks.cs" />
     <Compile Include="Kernel\WeaponsData.cs" />
-    <Compile Include="Kernel\ZellLimitBreakParameters.cs" />
+    <Compile Include="Kernel\Limit\ZellLimitBreakParameters.cs" />
     <Compile Include="Loc.cs" />
     <Compile Include="Archive\Compression\LZSS.cs" />
     <Compile Include="Memory.cs" />
