new string dump app.
I'm trying to figure out a plan for dealing with string id's not matching in different languages.

--- a/DumpStrings/DumpStrings.csproj
+++ b/DumpStrings/DumpStrings.csproj
@@ -70,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="multiple.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
