--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -440,7 +440,7 @@
     <Compile Include="Strings\FF8String.cs" />
     <Compile Include="Strings\FF8StringReference.cs" />
     <Compile Include="AV\Ffcc.cs" />
-    <Compile Include="AV\FfccVaribleGroup.cs" />
+    <Compile Include="AV\FfccVariableGroup.cs" />
     <Compile Include="FFmpegBinariesHelper.cs" />
     <Compile Include="Field\Core\BreakAwaitable.cs" />
     <Compile Include="Field\Core\Coords3D.cs" />
