--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -234,15 +234,37 @@
     <Compile Include="Battle\BattleSwirl.cs" />
     <Compile Include="Battle\Characters\CharacterData.cs" />
     <Compile Include="Battle\Characters\CharacterInstanceInformation.cs" />
+    <Compile Include="Battle\Dat\Animation.cs" />
+    <Compile Include="Battle\Dat\AnimationData.cs" />
+    <Compile Include="Battle\Dat\AnimationFrame.cs" />
+    <Compile Include="Battle\Dat\AnimationSequence.cs" />
+    <Compile Include="Battle\Dat\AnimationYOffset.cs" />
+    <Compile Include="Battle\Dat\Bone.cs" />
+    <Compile Include="Battle\Dat\DatFile.cs" />
+    <Compile Include="Battle\Dat\EntityType.cs" />
+    <Compile Include="Battle\Dat\Geometry.cs" />
+    <Compile Include="Battle\Dat\Object.cs" />
+    <Compile Include="Battle\Dat\Quad.cs" />
+    <Compile Include="Battle\Dat\Sections.cs" />
+    <Compile Include="Battle\Dat\Skeleton.cs" />
+    <Compile Include="Battle\Dat\Textures.cs" />
+    <Compile Include="Battle\Dat\Triangle.cs" />
+    <Compile Include="Battle\Dat\UV.cs" />
+    <Compile Include="Battle\Dat\VectorBoneGRP.cs" />
+    <Compile Include="Battle\Dat\Vertex.cs" />
+    <Compile Include="Battle\Dat\VertexData.cs" />
+    <Compile Include="Battle\Dat\VertexPositionTexturePointersGRP.cs" />
     <Compile Include="Battle\Encounters\Coordinate.cs" />
     <Compile Include="Battle\DeadTime.cs" />
-    <Compile Include="Battle\debug_battleDat.cs" />
+    <Compile Include="Battle\Dat\debug_battleDat.cs" />
     <Compile Include="Battle\Encounters\Encounter.cs" />
     <Compile Include="Battle\Encounters\EncounterFlag.cs" />
     <Compile Include="Battle\Encounters\Encounters.cs" />
+    <Compile Include="Battle\Enemies\Abilities.cs" />
     <Compile Include="Battle\Enemies\Enemy.cs" />
     <Compile Include="Battle\Encounters\EnemyCoordinates.cs" />
     <Compile Include="Battle\Enemies\EnemyInstanceInformation.cs" />
+    <Compile Include="Battle\Enemies\Magic.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\Enemies\IEnemy.cs" />
     <Compile Include="Battle\Enemies\Information.cs" />
@@ -412,8 +434,8 @@
     <Compile Include="Menu\LGSG\IGMData\ThreePieceHeader.cs" />
     <Compile Include="Menu\Lobby\IGMData_Selections.cs" />
     <Compile Include="Battle\Menu\VictoryMenu.cs" />
-    <Compile Include="Battle\module_battle.cs" />
-    <Compile Include="Battle\module_battle_Debug.cs" />
+    <Compile Include="Battle\ModuleBattle.cs" />
+    <Compile Include="Battle\ModuleBattleDebug.cs" />
     <Compile Include="Characters.cs" />
     <Compile Include="DictionaryEx.cs" />
     <Compile Include="Image\Entry.cs" />
