--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -233,7 +233,7 @@
     <Compile Include="Battle\AnimationSystem.cs" />
     <Compile Include="Battle\BattleModule.cs" />
     <Compile Include="Battle\BattleSwirl.cs" />
-    <Compile Include="Battle\Characters\CharacterData.cs" />
+    <Compile Include="Battle\Dat\CharacterData.cs" />
     <Compile Include="Battle\Characters\CharacterInstanceInformation.cs" />
     <Compile Include="Battle\Dat\Animation.cs" />
     <Compile Include="Battle\Dat\AnimationData.cs" />
@@ -265,17 +265,17 @@
     <Compile Include="Battle\Encounters\Encounter.cs" />
     <Compile Include="Battle\Encounters\EncounterFlag.cs" />
     <Compile Include="Battle\Encounters\Encounters.cs" />
-    <Compile Include="Battle\Enemies\Abilities.cs" />
+    <Compile Include="Battle\Dat\Abilities.cs" />
     <Compile Include="Battle\Enemies\Enemy.cs" />
     <Compile Include="Battle\Encounters\EnemyCoordinates.cs" />
     <Compile Include="Battle\Enemies\EnemyInstanceInformation.cs" />
-    <Compile Include="Battle\Enemies\Flag1.cs" />
-    <Compile Include="Battle\Enemies\Flag2.cs" />
-    <Compile Include="Battle\Enemies\Magic.cs" />
-    <Compile Include="Battle\Enemies\UnkFlag.cs" />
+    <Compile Include="Battle\Dat\Flag1.cs" />
+    <Compile Include="Battle\Dat\Flag2.cs" />
+    <Compile Include="Battle\Dat\Magic.cs" />
+    <Compile Include="Battle\Dat\UnkFlag.cs" />
     <Compile Include="Battle\FPS_Camera.cs" />
     <Compile Include="Battle\Enemies\IEnemy.cs" />
-    <Compile Include="Battle\Enemies\Information.cs" />
+    <Compile Include="Battle\Dat\Information.cs" />
     <Compile Include="Battle\Mag\BinReaderExt.cs" />
     <Compile Include="BinaryReaderExt.cs" />
     <Compile Include="Battle\Mag\Geometry.cs" />
