--- a/DirectX/packages.config
+++ b/DirectX/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package BattleID="MonoGame.Framework.WindowsDX" version="3.7.1.189" targetFramework="net46" />
-  <package BattleID="SharpDX" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.Direct2D1" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.Direct3D11" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.Direct3D9" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.DXGI" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.Mathematics" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.XAudio2" version="4.2.0" targetFramework="net46" />
-  <package BattleID="SharpDX.XInput" version="4.2.0" targetFramework="net46" />
+  <package ID="MonoGame.Framework.WindowsDX" version="3.7.1.189" targetFramework="net46" />
+  <package ID="SharpDX" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.Direct2D1" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.Direct3D11" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.Direct3D9" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.DXGI" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.Mathematics" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.XAudio2" version="4.2.0" targetFramework="net46" />
+  <package ID="SharpDX.XInput" version="4.2.0" targetFramework="net46" />
 </packages>
