cleaned up camera class and cameras class
camera's is now using ireadonlylist instead of Ilist

changed XYZ from array to a value tuple of 3 Vector3's with varible names

added pan per maki.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -327,6 +327,7 @@
     <Compile Include="CountDown.cs" />
     <Compile Include="DrawVertDeclaration.cs" />
     <Compile Include="Field\Archive.cs" />
+    <Compile Include="Field\Camera\Camera.cs" />
     <Compile Include="Field\Camera\Cameras.cs" />
     <Compile Include="Field\EnumFlagExt.cs" />
     <Compile Include="Field\Field_modes.cs" />
