fix issues in IGM and LGSG menus with laguna's team. and cleaned up some more cs files.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -443,7 +443,7 @@
     <Compile Include="Menu\LGSG\IGMData\GameBlock.cs" />
     <Compile Include="Menu\LGSG\IGMData\GameChoose.cs" />
     <Compile Include="Menu\LGSG\IGMData\SlotChoose.cs" />
-    <Compile Include="Menu\LGSG\IGM_LGSG.cs" />
+    <Compile Include="Menu\LGSG\IGMLoadSaveGame.cs" />
     <Compile Include="Menu\LGSG\IGMData\LoadBarBox.cs" />
     <Compile Include="Menu\LGSG\IGMData\ThreePieceHeader.cs" />
     <Compile Include="Menu\Lobby\IGMData_Selections.cs" />
@@ -1026,13 +1026,13 @@
     <Compile Include="Menu\Images\Icons.ID.cs" />
     <Compile Include="Menu\Images\Icons.InsertCustomEntries.cs" />
     <Compile Include="Menu\IGM\IGM.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_Clock.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_Footer.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_Header.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_NonParty.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_Party.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_PartyGroup.cs" />
-    <Compile Include="Menu\IGM\IGMData\IGMData_SideMenu.cs" />
+    <Compile Include="Menu\IGM\IGMData\Clock.cs" />
+    <Compile Include="Menu\IGM\IGMData\Footer.cs" />
+    <Compile Include="Menu\IGM\IGMData\Header.cs" />
+    <Compile Include="Menu\IGM\IGMData\NonParty.cs" />
+    <Compile Include="Menu\IGM\IGMData\Party.cs" />
+    <Compile Include="Menu\IGM\IGMData\PartyGroup.cs" />
+    <Compile Include="Menu\IGM\IGMData\SideMenu.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_Statuses.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TargetPool.cs" />
     <Compile Include="Menu\IGM_Items\IGMData\IGMData_TopMenu.cs" />
