--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1102,6 +1102,8 @@
     <Compile Include="Image\TIM2.cs" />
     <Compile Include="World\CharaOne.cs" />
     <Compile Include="World\debug_MCH.cs" />
+    <Compile Include="World\interchangeableZones.cs" />
+    <Compile Include="World\MiniMaps.cs" />
     <Compile Include="World\module_world_debug.cs" />
     <Compile Include="World\rail.cs" />
     <Compile Include="World\texl.cs" />
