--- a/Testing/packages.config
+++ b/Testing/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package ID="MonoGame.Framework.Portable" version="3.7.1.189" targetFramework="net461" />
-  <package ID="NUnit" version="3.12.0" targetFramework="net461" />
-  <package ID="NUnit3TestAdapter" version="3.16.1" targetFramework="net46" developmentDependency="true" />
+  <package id="MonoGame.Framework.Portable" version="3.7.1.189" targetFramework="net461" />
+  <package id="NAudio" version="1.10.0" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net46" developmentDependency="true" />
 </packages>
