--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -393,6 +393,7 @@
     <Compile Include="Field\WalkMesh\Vert.cs" />
     <Compile Include="Field\WalkMesh\WalkMesh.cs" />
     <Compile Include="FPSCounter.cs" />
+    <Compile Include="GameDirectoryFinder.cs" />
     <Compile Include="Image\Bppflag.cs" />
     <Compile Include="Image\Cluts.cs" />
     <Compile Include="Image\ColorABGR1555.cs" />
@@ -1117,11 +1118,6 @@
     <Compile Include="Saves\Saves.TripleTriad.cs" />
     <Compile Include="Saves\Saves.Worldmap.cs" />
     <Compile Include="Sources\Environment\Build\BuildEnvironment.cs" />
-    <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
-    <Compile Include="Sources\Environment\Game\Location\HardcodedGameLocationProvider.cs" />
-    <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
-    <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
-    <Compile Include="Sources\Environment\Game\Location\WindowsGameLocationProvider.cs" />
     <Compile Include="Sources\Environment\Runtime\RuntimeEnvironment.cs" />
     <Compile Include="Sources\Environment\Runtime\RuntimePlatform.cs" />
     <Compile Include="Sources\Exceptions\ExceptionList.cs" />
@@ -1295,7 +1291,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Sources\Environment\Game\Location\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Encoding\Encoding.csproj">
       <Project>{a9b33bf4-9b03-4e3d-bf6a-181521046ee8}</Project>
